--- a/server/templates/footer.html
+++ b/server/templates/footer.html
@@ -1,6 +1,7 @@
 <div class="footer">
     <a href="mailto:admin@pystream.com">{{ lang|translation:'contact' }}</a> |
-    Copyright © 2011 by <a href="/author" title="pystream's author">NeoRazorX</a>.
+    Copyright © 2011 by <a target="_Blank" href="http://www.neorazorx.com/p/cv.html" title="pystream's author">NeoRazorX</a>.
 </div>
+<img class="beta" src="/img/beta.png" alt="This is betaaaa!!!" title="This is betaaaaa!!!"/>
 </body>
 </html>
