--- a/server/css/web.css
+++ b/server/css/web.css
@@ -1,12 +1,5 @@
 body {
-    background-color: #C7DDED;
-    background: -moz-linear-gradient(left, #c7dded 0%, #5ea0d6 50%, #c7dded 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, right top, color-stop(0%,#c7dded), color-stop(50%,#5ea0d6), color-stop(100%,#c7dded)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(left, #c7dded 0%,#5ea0d6 50%,#c7dded 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(left, #c7dded 0%,#5ea0d6 50%,#c7dded 100%); /* Opera11.10+ */
-    background: -ms-linear-gradient(left, #c7dded 0%,#5ea0d6 50%,#c7dded 100%); /* IE10+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#C7DDED', endColorstr='#C7DDED',GradientType=1 ); /* IE6-9 */
-    background: linear-gradient(left, #c7dded 0%,#5ea0d6 50%,#c7dded 100%); /* W3C */
+    background-color: #2E4D69;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 13px;
     margin-top: 0px;
@@ -30,13 +23,28 @@ img {
     border-width: 0;
 }
 
+img.gallery {
+    border: 3px double #333333;
+    max-width: 200px;
+    max-height: 200px;
+}
+
+img.beta {
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+}
+
 textarea {
     width: 99%;
     border: 1px solid #191919;
 }
 
 hr {
-    border: 1px dashed #191919;
+    border: 0px solid white;
+    border-bottom: 1px dashed #191919;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 input {
@@ -52,30 +60,40 @@ input[type='submit'] {
 }
 
 div.header {
+    padding-top: 10px;
     font-size: 24px;
 }
 
 div.header a {
-    color: black;
+    color: white;
+}
+
+div.header img {
+    vertical-align: bottom;
 }
 
 div.top_right {
     float: right;
-    color: white;
     font-size: 15px;
-    text-align: center;
     background-color: #191919;
+    padding: 5px;
     margin-top: 0px;
     margin-bottom: 10px;
-    padding: 5px;
-    border-left: 10px solid #191919;
-    border-right: 10px solid #191919;
+    border-left: 1px solid #191919;
+    border-right: 1px solid #191919;
     border-bottom-left-radius: 5px 5px;
     border-bottom-right-radius: 5px 5px;
+    border-bottom: 1px solid #191919;
 }
 
 div.top_right a {
     color: white;
+    padding: 5px;
+}
+
+div.top_right a:hover {
+    text-decoration: none;
+    background-color: #3C3C3C;
 }
 
 div.arrow {
@@ -91,21 +109,11 @@ div.arrow#main {
 }
 
 div.arrow#streamid {
-    margin-left: 190px;
+    margin-left: 160px;
 }
 
 div.arrow#menu {
     margin-right: 55px;
-    margin-left: auto;
-}
-
-div.arrow_down {
-    background-image: url('/img/arrow_down.png');
-    background-repeat: no-repeat;
-    height: 13px;
-    width: 50px;
-    margin-bottom: 10px;
-    margin-right: 5px;
     margin-left: auto;
 }
 
@@ -128,10 +136,40 @@ div.body {
     border-bottom-right-radius: 8px 8px;
 }
 
-div.search {
-    width: 100%;
+div.options {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+div.options span {
+    padding: 3px;
+    background-color: #3C3C3C;
+    border: 2px solid #3C3C3C;
+    border-top-left-radius: 3px 3px;
+    border-top-right-radius: 3px 3px;
+    border-bottom-left-radius: 3px 3px;
+    border-bottom-right-radius: 3px 3px;
+}
+
+div.options a {
+    padding: 3px;
     padding-left: 10px;
     padding-right: 10px;
+    color: white;
+}
+
+div.options a.selected {
+    background-color: #6C6C6C;
+}
+
+div.options a:hover {
+    text-decoration: none;
+    background-color: #7C7C7C;
+}
+
+div.search {
+    padding: 10px;
+    background-color: #EFEFEF;
     text-align: center;
 }
 
@@ -139,36 +177,38 @@ div.search input.search_box {
     width: 80%;
 }
 
+div.worldintags {
+    line-height: 175%;
+}
+
+a.tag {
+    background-color: #1D81B9;
+    padding-left: 5px;
+    padding-right: 5px;
+    border-top-left-radius: 2px 2px;
+    border-top-right-radius: 2px 2px;
+    border-bottom-left-radius: 2px 2px;
+    border-bottom-right-radius: 2px 2px;
+    color: white;
+}
+
 table.main {
-    width: 100%;
-    margin-top: 10px;
+    text-align: center;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
     font-size: 18px;
 }
 
 table.main td {
     vertical-align: top;
     text-align: center;
+    padding: 20px;
 }
 
-table.main td div.download {
-    background-color: #1D81B9;
-    border: 2px outset #1D81B9;
-    width: 290px;
-    padding: 5px;
-    margin-top: 25px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-table.main td div.download a {
-    font-size: 16px;
-    color: white;
-    font-weight: bold;
-}
-
-table.main td a.download2 {
-    font-size: 12px;
-    font-weight: bold;
+table.main td:hover {
+    background-color: #feffc0;
 }
 
 div.message {
@@ -208,12 +248,16 @@ div.error a {
     color: white;
 }
 
-div.section {
+div.section, div.pylinks {
     width: 95%;
     margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 30px;
+}
+
+div.pylinks {
+    border: 1px dashed black;
 }
 
 div.title {
@@ -236,6 +280,7 @@ div.stream_description {
     background-color: #EFEFEF;
     border: 1px solid #DEDEDE;
     padding: 5px;
+    margin-bottom: 2px;
     font-size: 17px;
 }
 
@@ -247,12 +292,68 @@ div.stream_info {
     padding: 0px;
 }
 
+div.hidden {
+    display: none;
+}
+
+div.pylink {
+    padding-left: 5px;
+}
+
+div.pylink:hover {
+    background-color: #EFEFEF;
+}
+
+span.green, span.red, span.yellow {
+    float: left;
+    width: 60px;
+    font-size: 11px;
+    text-align: center;
+    border-top-left-radius: 2px 2px;
+    border-top-right-radius: 2px 2px;
+    border-bottom-left-radius: 2px 2px;
+    border-bottom-right-radius: 2px 2px;
+}
+
+span.green {
+    background-color: green;
+    color: white;
+}
+
+span.red {
+    background-color: red;
+    color: white;
+}
+
+span.yellow {
+    background-color: yellow;
+    color: black;
+}
+
+a.file_name {
+    float: right;
+    color: black;
+    font-weight: normal;
+}
+
+a.stream {
+    background-color: gray;
+    color: white;
+    padding-left: 5px;
+    padding-right: 5px;
+    border-top-left-radius: 2px 2px;
+    border-top-right-radius: 2px 2px;
+    border-bottom-left-radius: 2px 2px;
+    border-bottom-right-radius: 2px 2px;
+    text-transform: uppercase;
+}
+
 table.comments {
     width: 100%;
 }
 
 table.comments tr.comment:hover {
-    background-color: #C7DDED
+    background-color: #feffc0;
 }
 
 table.comments td {
@@ -281,7 +382,11 @@ table.custom tr.top td {
 }
 
 table.custom tr:hover {
-    background-color: #C7DDED
+    background-color: #feffc0;
+}
+
+table.custom tr.top:hover {
+    background-color: white;
 }
 
 div.pages {
@@ -310,10 +415,11 @@ div.pages span#current a {
 
 div.footer {
     text-align: right;
+    color: white;
     margin-top: 15px;
 }
 
 div.footer a {
-    color: black;
+    color: white;
 }
 
