--- a/server/templates/admin_reports.html
+++ b/server/templates/admin_reports.html
@@ -2,11 +2,11 @@
 <div class="arrow" id="menu"></div>
 <div class="body">
 
-<center>
-    <a href="/admin/streams">streams</a>
-    | <s><a href="/admin/reports">reports</a></s>
-    | <a href="/admin/stats">stats</a>
-</center>
+<div class="options">
+    <span>
+    <a href="/admin/">main</a><a href="/admin/streams">streams</a><a href="/admin/requests">requests</a><a class="selected" href="/admin/reports">reports</a><a href="/admin/stats">stats</a>
+    </span>
+</div>
 
 {% if removed %}
     <div class="message">Report removed successfull!</div>
@@ -14,22 +14,25 @@
 
 <table class="custom">
 <tr class="top">
-    <td>Reports</td>
+    <td>Time ago</td>
+    <td>Report</td>
 </tr>
 {% for rep in reports %}
     <tr>
         <td>
-        <b>Link</b>: <a href="{{ rep.get_link }}">{{ rep.link }}</a>
-        <b>from</b>: {{ rep.ip|full_ip }}
-        <b>with</b>: {{ rep.os|show_os }}
-        <b>about</b> {{ rep.date|timesince }} ago
-        | <a href="#" onclick="remove_report('{{ rep.key }}')">remove</a>
-        <br/>
-        {{ rep.text|safe|linebreaksbr|urlize }}
+            {{ rep.date|timesince }}<br/>
+            <a href="#" onclick="remove_report('{{ rep.key }}')">remove</a>
+        </td>
+        <td>
+            <b>Link</b>: <a href="{{ rep.get_link }}">{{ rep.link }}</a>
+            <b>from</b>: {{ rep.ip }}
+            <b>with</b>: {{ rep.os|show_os }}
+            <br/>
+            {{ rep.text|safe|linebreaksbr|urlize }}
         </td>
     </tr>
 {% empty %}
-    <tr><td>empty!</td></tr>
+    <tr><td colspan="2">empty!</td></tr>
 {% endfor %}
 </table>
 
