--- a/server/templates/main.html
+++ b/server/templates/main.html
@@ -2,80 +2,27 @@
 <div class="arrow" id="main"></div>
 <div class="body">
 
-{% if local_streams %}
 <div class="search">
     <form name="search" action="/search" method="get">
         <input class="search_box" type="text" name="query" value="{{ query }}"/>
         <input type="submit" value="{{ lang|translation:'search' }}"/>
     </form>
 </div>
-<br/>
-<table class="custom">
-<tr class="top">
-    <td>{{ lang|translation:'stnears' }}</td>
-    <td>Size</td>
-    <td>Status</td>
-    <td align="right">uptime</td>
-</tr>
-{% for stream in local_streams %}
-    <tr>
-        <td>
-            <a href="{{ stream.get_link }}" title="Stream: {{ stream.key.id }}">
-            {{ stream.description|truncate:70 }}
-            </a>
-        </td>
-        <td>{{ stream.size|size }}</td>
-        <td>{{ stream.status_text }}</td>
-        <td align="right">{{ stream.date|timesince }}</td>
-    </tr>
-{% endfor %}
-</table>
-<br/>
-<hr/>
-<br/>
-{% endif %}
 
 <table class="main">
 <tr>
-{% if user_os = 'linux' %}
-    <td rowspan="2">
-        <img src="/img/pystream-linux-client.png" alt="Linux client"/>
-    </td>
-    <td>
-        <div class="download">
-            <a href="{{ linux_client_url }}" target="_Blank">{{ lang|translation:'downlinux' }}</a>
-        </div>
-        <a class="download2" href="/new#client">{{ lang|translation:'allvers' }}</a>
-    </td>
-{% else %}
-    {% if user_os = 'windows' %}
-        <td rowspan="2">
-            <img src="/img/pystream-windows-client.png" alt="Windows client"/>
-        </td>
-        <td>
-            <div class="download">
-                <a href="{{ windows_client_url }}" target="_Blank">{{ lang|translation:'downwindow' }}</a>
-            </div>
-            <a class="download2" href="/new#client">{{ lang|translation:'allvers' }}</a>
-        </td>
-    {% else %}
-        <td>
-            <img src="/img/notebook.png" alt="unknown platform"/>
-            <div class="download"><a href="/new#client">{{ lang|translation:'download' }}</a></div>
-        </td>
-    {% endif %}
-{% endif %}
-</tr>
-<tr>
-    <td>
-        <br/>{{ lang|translation:'main1' }}.<br/>{{ lang|translation:'main2' }}
-        <a href="/new#lanparties">{{ lang|translation:'lanparties' }}</a>!
-        <br/><br/>
-        {{ lang|translation:'iwantknow' }} <a href="/new">{{ lang|translation:'more' }}</a>...<br/>
-        {{ lang|translation:'ihave' }} <a href="/report?link=/">{{ lang|translation:'suggest' }}</a>.<br/>
-    </td>
+    <td><a href="/download"><img src="/img/share_files.png" alt="share files"/><br/>{{ lang|translation:'sharefiles'|capfirst }}</a></td>
+    <td><a href="/new_links"><img src="/img/new_links.png" alt="share links"/><br/>{{ lang|translation:'sharelinks'|capfirst }}</a></td>
+    <td><a href="/new_request"><img src="/img/new_request.png" alt="make a request"/><br/>{{ lang|translation:'makerequest'|capfirst }}</a></td>
 </tr>
 </table>
+
+{% if tags %}
+<div class="section">
+    <div class="title">{{ lang|translation:'worldtags'|capfirst }}:</div>
+    {{ tags|show_tags }}
+</div>
+{% endif %}
 
 </div>
 {% include "footer.html" %}
