--- a/server/templates/stream_ask_password.html
+++ b/server/templates/stream_ask_password.html
@@ -3,22 +3,17 @@
 <div class="body">
 
 <div class="message">This stream is password protected</div>
-<br/>
-<br/>
-<br/>
-<table align="center">
-<tr>
-    <td><img src="/img/candado.png" alt="Lock" title="http://www.iconarchive.com/show/i-love-icons-by-svengraph/Lock-icon.html"/></td>
-    <td>
-        <form name="stream" action="/sp/{{ streamid }}" method="post">
-        <b>Password:</b>
-        <input type="password" name="password" size='20' maxlength='20' value=""/>
-        <br/>{{ captcha|safe }}
-        <input type="submit" value="send"/>
-        </form>
-    </td>
-</tr>
-</table>
+
+<br/><br/><br/>
+
+<center>
+    <form name="stream" action="{{ stream.get_link }}" method="post">
+    <b>Password:</b>
+    <input type="password" name="password" size='20' maxlength='20' value=""/>
+    <br/>{{ captcha|safe }}
+    <input type="submit" value="{{ lang|translation:'send' }}"/>
+    </form>
+</center>
 
 </div>
 {% include "footer.html" %}
