--- a/server/templates/header.html
+++ b/server/templates/header.html
@@ -32,7 +32,7 @@
 <div class="top_right">
     <a href="/new">{{ lang|translation:'new' }}</a>
     <a href="/random">{{ lang|translation:'random' }}</a>
-    <a href="/search">{{ lang|translation:'search' }}</a>
+    <a href="/search/">{{ lang|translation:'search' }}</a>
     {% if admin %}
         <a href="/admin/">{{ lang|translation:'admin' }}</a>
         <a href="{{ logout }}">{{ lang|translation:'logout' }}</a>
