--- a/server/templates/download.html
+++ b/server/templates/download.html
@@ -31,9 +31,9 @@
     
     <table class="main">
     <tr>
-        <td align="center"><a href="#"><img src="/img/windows.png" alt="windows"/><br/>Windows</a></td>
+        <td align="center"><img src="/img/windows.png" alt="windows"/><br/>Coming soon</td>
         <td align="center"><a href="/download?os=linux"><img src="/img/linux.png" alt="linux"/><br/>Linux</a></td>
-        <td align="center"><a href="#"><img src="/img/mac.png" alt="mac"/><br/>Mac</a></td>
+        <td align="center"><img src="/img/mac.png" alt="mac"/><br/>Coming soon</td>
     </tr>
     </table>
 </div>
@@ -41,7 +41,7 @@
 <br/>
 
 {% if user_os = 'linux' %}
-    <center><img src="/img/pystream_linux.png" alt="Linux"/></center>
+    <center><img src="/img/pst-linux.png" alt="Linux"/></center>
 {% endif %}
 
 </div>
